Add initial site

--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
 </head>
 
 <body>
-<table>
-  <tr>
-    <td><img src="IMG_20200602_070558.jpg" alt="david profile picture"></td>
-    <td>  <h1>David Odde</h1>
-      <p><em>Founder and Creator of David & Co.</em></p>
-      <p>I am a student of the University of Lagos. My research focuses on the
-        learning of fullstack web development and the
-        implementation of it in a fullscale business corporation.
-        I am currently undergoing the Udemy fullstack web development
-        course. </p></td>
-  </tr>
-</table>
+  <table>
+    <tr>
+      <td><img src="IMG_20200602_070558.jpg" alt="david profile picture"></td>
+      <td>
+        <h1>David Odde</h1>
+        <p><em>Founder and Creator of David & Co.</em></p>
+        <p>I am a student of the University of Lagos. My research focuses on the
+          learning of fullstack web development and the
+          implementation of it in a fullscale business corporation.
+          I am currently undergoing the Udemy fullstack web development
+          course. </p>
+      </td>
+    </tr>
+  </table>
 
   <hr>
   <h3>Education</h3>
@@ -27,44 +29,44 @@
     <li><a href="https://www.udemy.com/home/my-courses/learning/">Udemy web development bootcamp</a></li>
   </ul>
   <hr>
-<h3>Work Experience</h3>
-<table cellspacing="10">
-  <thead>
-    <tr>
-      <th>Dates</th>
-      <th>Location</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>2019-2020</td>
-      <td>Havillah Trend Intl.</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td>2016-2020</td>
-      <td>University Of Lagos</td>
-    </tr>
-  </tfoot>
-</table>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Location</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2019-2020</td>
+        <td>Havillah Trend Intl.</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td>2016-2020</td>
+        <td>University Of Lagos</td>
+      </tr>
+    </tfoot>
+  </table>
   <hr>
-<h3>Skills</h3>
-<table cellspacing="10">
-      <tr>
-        <td>Web Development</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Photography</td>
-        <td>⭐</td>
-      </tr>
-      <tr>
-        <td>Driving</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-    </table>
-    <hr>
+  <h3>Skills</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>Web Development</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Photography</td>
+      <td>⭐</td>
+    </tr>
+    <tr>
+      <td>Driving</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+  </table>
+  <hr>
   <h3>Hobbies</h3>
   <ol>
     <li>Reading</li>
@@ -72,7 +74,7 @@
     <li><a href="https://www.google.com/search?rlz=1C1JZAP_enNG873NG883&sxsrf=ALeKk00ru97BeKjvqPapplJdbL0fLzVw_Q:1591738453852&source=univ&tbm=isch&q=cars&sa=X&ved=2ahUKEwjezPfo1_XpAhWeAWMBHdWWCHwQsAR6BAgDEAE&biw=1366&bih=657">Cars</a></li>
   </ol>
   <hr>
-  <h3><a href="Contact Me.html">Contact Me</a></h3> 
+  <h3><a href="Contact Me.html">Contact Me</a></h3>
 </body>
 
 </html>
