--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <table>
+  <table cellspacing="15">
     <tr>
       <td><img src="IMG_20200602_070558.jpg" alt="david profile picture"></td>
       <td>
@@ -40,7 +40,7 @@
     <tbody>
       <tr>
         <td>2019-2020</td>
-        <td>Havillah Trend Intl.</td>
+        <td>Havillah Trend Intl</td>
       </tr>
     </tbody>
     <tfoot>
