--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
       <td><img src="IMG_20200602_070558.jpg" alt="david profile picture"></td>
       <td>
         <h1>David Odde</h1>
-        <p><em>Founder and Creator of David & Co.</em></p>
-        <p>I am a student of the University of Lagos. My research focuses on the
-          learning of fullstack web development and the
-          implementation of it in a fullscale business corporation.
+        <p><em>Founder and Creator of <strong>David & Co.</strong></em></p>
+        <p>I am a student of the University of Lagos.<br>
           I am currently undergoing the Udemy fullstack web development
           course. </p>
       </td>
@@ -40,7 +38,7 @@
     <tbody>
       <tr>
         <td>2019-2020</td>
-        <td>Havillah Trend Intl</td>
+        <td>Somewhere on Earth</td>
       </tr>
     </tbody>
     <tfoot>
