--- a/Contact Me.html
+++ b/Contact Me.html
@@ -8,7 +8,7 @@
     <h1>My Contact Details</h1>
     <p>My Address</p>
     <p>08083840104</p>
-    <p>david@gmail.com</p>
+    <p>daveoddejnr@gmail.com</p>
 <hr>
 <form class="" action="mailto:daveoddejnr@gmail.com" method="post"enctype="text/plain">
   <label>Your Name</label>
